objects/Goal_Action__c.object
<CustomObject>
    <description>Goal Action</description>
    <fields>
        <fullName>Action_Complete__c</fullName>
        <description>Action Complete</description>
        <inlineHelpText>Select Action Complete - Yes / No</inlineHelpText>
        <label>Action Complete</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Action_Date__c</fullName>
        <description>Action Date</description>
        <inlineHelpText>Action Date</inlineHelpText>
        <label>Action Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Action_Name__c</fullName>
        <description>Action Name</description>
        <inlineHelpText>Action Name</inlineHelpText>
        <label>Action Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_to_Complete__c</fullName>
        <description>Action to Complete</description>
        <inlineHelpText>Action to Complete</inlineHelpText>
        <label>Action to Complete</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Goal__c</fullName>
        <description>Review Goal</description>
        <inlineHelpText>Review Goal</inlineHelpText>
        <label>Review Goal</label>
        <referenceTo>SPM_Goal__c</referenceTo>
        <relationshipName>Goal_Activity</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Action Items</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GA-{00000}</displayFormat>
        <label>Action Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>